--- a/index.html
+++ b/index.html
@@ -557,11 +557,11 @@
         <h3>6.4 后台管理系统截图</h3>
         <div class="screenshot-container">
             <div class="screenshot-item">
-                <img src="4.png" alt="卡池管理" class="screenshot">
+                <img src="img/4.png" alt="卡池管理" class="screenshot">
                 <div class="screenshot-caption">图4: 后台卡池管理界面</div>
             </div>
             <div class="screenshot-item">
-                <img src="5.png" alt="活动管理" class="screenshot">
+                <img src="img/5.png" alt="活动管理" class="screenshot">
                 <div class="screenshot-caption">图5: 后台活动管理界面</div>
             </div>
         </div>
