--- a/index.html
+++ b/index.html
@@ -121,6 +121,33 @@
             padding: 20px;
             border-radius: 8px;
             margin-bottom: 30px;
+            display: flex;
+            justify-content: space-between;
+            align-items: flex-start;
+            gap: 20px;
+        }
+
+        .toc-preview {
+            flex-shrink: 0;
+            text-align: center;
+        }
+
+        .preview-image {
+            width: 150px;
+            height: 150px;
+            object-fit: cover;
+            border-radius: 4px;
+            border: 1px solid #ddd;
+        }
+
+        @media (max-width: 768px) {
+            .toc {
+                flex-direction: column;
+            }
+
+            .toc-preview {
+                margin-top: 10px;
+            }
         }
 
         .toc ul {
@@ -160,6 +187,67 @@
             margin-bottom: 10px;
         }
 
+
+        .version-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 15px;
+            margin-top: 20px;
+        }
+
+        .version-card {
+            display: flex;
+            flex-direction: row;
+            background-color: #f9f9f9;
+            border-radius: 6px;
+            overflow: hidden;
+        }
+
+        .version-header {
+            display: flex;
+            align-items: center;
+            padding: 12px 15px;
+            background-color: #E2F2FE;
+            color: #558AF5;
+            font-weight: bold;
+            min-width: 100px;
+        }
+
+        .version-item {
+            padding: 15px;
+            display: flex;
+            align-items: center;
+            flex-grow: 1;
+        }
+
+        /* 小屏幕适配 */
+        @media (max-width: 600px) {
+            .version-grid {
+                grid-template-columns: 1fr;
+            }
+        }
+
+        .icon {
+            display: inline-block;
+            width: 20px;
+            height: 20px;
+            margin-right: 10px;
+            background-size: contain;
+            background-repeat: no-repeat;
+        }
+
+        .version-icon {
+            background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='%23558AF5'%3E%3Cpath d='M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm.31-8.86c-1.77-.45-2.34-.94-2.34-1.67 0-.84.79-1.43 2.1-1.43 1.38 0 1.9.66 1.94 1.64h1.71c-.05-1.34-.87-2.57-2.49-2.97V5H10.9v1.69c-1.51.32-2.72 1.3-2.72 2.81 0 1.79 1.49 2.69 3.66 3.21 1.95.46 2.34 1.15 2.34 1.87 0 .53-.39 1.39-2.1 1.39-1.6 0-2.23-.72-2.32-1.64H8.04c.1 1.7 1.36 2.66 2.86 2.97V19h2.34v-1.67c1.52-.29 2.72-1.16 2.73-2.77-.01-2.2-1.9-2.96-3.66-3.42z'/%3E%3C/svg%3E");
+        }
+
+        .calendar-icon {
+            background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='%23558AF5'%3E%3Cpath d='M19 3h-1V1h-2v2H8V1H6v2H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm0 16H5V8h14v11zM9 10H7v2h2v-2zm4 0h-2v2h2v-2zm4 0h-2v2h2v-2zm-8 4H7v2h2v-2zm4 0h-2v2h2v-2zm4 0h-2v2h2v-2z'/%3E%3C/svg%3E");
+        }
+
+        .user-icon {
+            background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='%23558AF5'%3E%3Cpath d='M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2c-2.5 0-4.71-1.28-6-3.22.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08-1.29 1.94-3.5 3.22-6 3.22z'/%3E%3C/svg%3E");
+        }
+
         .roadmap {
             margin-top: 20px;
         }
@@ -186,54 +274,6 @@
             background-color: #E2F2FE;
             border-radius: 4px;
         }
-
-        .version-grid {
-            display: grid;
-            grid-template-columns: repeat(3, 1fr);
-            gap: 12px;
-            margin-top: 20px;
-        }
-
-        .version-header {
-            display: flex;
-            align-items: center;
-            padding: 12px 15px;
-            background-color: #E2F2FE;
-            color: #558AF5;
-            font-weight: bold;
-            border-radius: 6px;
-        }
-
-        .version-item {
-            margin-left: 10px;
-            width: 65%;
-            padding: 15px;
-            background-color: #f9f9f9;
-            border-radius: 6px;
-            display: flex;
-            align-items: center;
-        }
-
-        .icon {
-            display: inline-block;
-            width: 20px;
-            height: 20px;
-            margin-right: 10px;
-            background-size: contain;
-            background-repeat: no-repeat;
-        }
-
-        .version-icon {
-            background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='%23558AF5'%3E%3Cpath d='M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm.31-8.86c-1.77-.45-2.34-.94-2.34-1.67 0-.84.79-1.43 2.1-1.43 1.38 0 1.9.66 1.94 1.64h1.71c-.05-1.34-.87-2.57-2.49-2.97V5H10.9v1.69c-1.51.32-2.72 1.3-2.72 2.81 0 1.79 1.49 2.69 3.66 3.21 1.95.46 2.34 1.15 2.34 1.87 0 .53-.39 1.39-2.1 1.39-1.6 0-2.23-.72-2.32-1.64H8.04c.1 1.7 1.36 2.66 2.86 2.97V19h2.34v-1.67c1.52-.29 2.72-1.16 2.73-2.77-.01-2.2-1.9-2.96-3.66-3.42z'/%3E%3C/svg%3E");
-        }
-
-        .calendar-icon {
-            background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='%23558AF5'%3E%3Cpath d='M19 3h-1V1h-2v2H8V1H6v2H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm0 16H5V8h14v11zM9 10H7v2h2v-2zm4 0h-2v2h2v-2zm4 0h-2v2h2v-2zm-8 4H7v2h2v-2zm4 0h-2v2h2v-2zm4 0h-2v2h2v-2z'/%3E%3C/svg%3E");
-        }
-
-        .user-icon {
-            background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='%23558AF5'%3E%3Cpath d='M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2c-2.5 0-4.71-1.28-6-3.22.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08-1.29 1.94-3.5 3.22-6 3.22z'/%3E%3C/svg%3E");
-        }
     </style>
 </head>
 
@@ -250,40 +290,51 @@
     <div class="section">
         <h2>目录</h2>
         <div class="toc">
-            <ul>
-                <li><a href="#version">1. 版本信息</a></li>
-                <li><a href="#changes">2. 变更日志</a></li>
-                <li><a href="#glossary">3. 名词解释</a></li>
-                <li><a href="#overview">4. 产品概述</a></li>
-                <li><a href="#miniprogram">5. 小程序功能需求</a></li>
-                <li><a href="#backend">6. 后台管理系统功能需求</a></li>
-                <li><a href="#tech">7. 技术需求</a></li>
-                <li><a href="#timeline">8. 项目时间线</a></li>
-                <li><a href="#planning">9. 项目规划</a></li>
-                <li><a href="#appendix">10. 附录</a></li>
-            </ul>
+            <div class="toc-list">
+                <ul>
+                    <li><a href="#version">1. 版本信息</a></li>
+                    <li><a href="#changes">2. 变更日志</a></li>
+                    <li><a href="#glossary">3. 名词解释</a></li>
+                    <li><a href="#overview">4. 产品概述</a></li>
+                    <li><a href="#miniprogram">5. 小程序功能需求</a></li>
+                    <li><a href="#backend">6. 后台管理系统功能需求</a></li>
+                    <li><a href="#tech">7. 技术需求</a></li>
+                    <li><a href="#timeline">8. 项目时间线</a></li>
+                    <li><a href="#planning">9. 项目规划</a></li>
+                    <li><a href="#appendix">10. 附录</a></li>
+                </ul>
+            </div>
+            <div class="toc-preview">
+                <img src="img/code.jpg" alt="小程序预览" class="preview-image">
+                <p>小程序预览地址</p>
+            </div>
         </div>
     </div>
 
     <div class="section" id="version">
         <h2>1. 版本信息</h2>
         <div class="version-grid">
-            <div class="version-header">
-                <i class="icon version-icon"></i>
-                <span>版本号</span>
+            <div class="version-card">
+                <div class="version-header">
+                    <i class="icon version-icon"></i>
+                    <span>版本号</span>
+                </div>
                 <div class="version-item">1.1</div>
             </div>
-            <div class="version-header">
-                <i class="icon calendar-icon"></i>
-                <span>日期</span>
+            <div class="version-card">
+                <div class="version-header">
+                    <i class="icon calendar-icon"></i>
+                    <span>日期</span>
+                </div>
                 <div class="version-item">2025-7-20</div>
             </div>
-            <div class="version-header">
-                <i class="icon user-icon"></i>
-                <span>修改人</span>
+            <div class="version-card">
+                <div class="version-header">
+                    <i class="icon user-icon"></i>
+                    <span>修改人</span>
+                </div>
                 <div class="version-item">李旭彬</div>
             </div>
-
         </div>
     </div>
 
@@ -484,6 +535,12 @@
                     <td>图片链接</td>
                 </tr>
                 <tr>
+                    <td>articleUrl</td>
+                    <td>URL</td>
+                    <td>是</td>
+                    <td>文章链接</td>
+                </tr>
+                <tr>
                     <td>startDate</td>
                     <td>日期</td>
                     <td>是</td>
@@ -532,6 +589,12 @@
                     <td>URL</td>
                     <td>是</td>
                     <td>图片链接</td>
+                </tr>
+                <tr>
+                    <td>articleUrl</td>
+                    <td>URL</td>
+                    <td>是</td>
+                    <td>文章链接</td>
                 </tr>
                 <tr>
                     <td>startDate</td>
