--- a/index.html
+++ b/index.html
@@ -423,7 +423,12 @@
             </ul>
         </div>
 
-        <h3>5.4 小程序界面截图</h3>
+        <div>
+            <h3>5.4 小程序系统架构</h3>
+            <img src="img/framework.png" alt="小程序系统架构" class="screenshot">
+        </div>
+
+        <h3>5.5 小程序界面截图</h3>
         <div class="screenshot-container">
             <div class="screenshot-item">
                 <img src="img/1.png" alt="卡池页面" class="screenshot">
